# asrs-problem-factor-analysis

./: README.md  pyproject.toml
analysis/: ASRS_context_engineering.ipynb  ASRS_zero_shot.ipynb  context_engineering.ipynb  downsample_4_pe_trial_1.csv  event_duplicate_analysis.ipynb  event_nb_classification.ipynb  event_oneVSmany_classifcation.ipynb  event_stacking_classification.ipynb  pred_downsample_bX_to_4.json  pred_downsample_to_10_pe_2_gemma.json  utils.py
data-processing/: 2015_2021_airspace_structure.csv  2015_2021_atc_nav_builds.csv  2015_2021_chartorpub.csv  2015_2021_company_policy.csv  2015_2021_env_nonweather.csv  2015_2021_equipment_tooling.csv  2015_2021_incorrect_part.csv  2015_2021_logbook_entry.csv  2015_2021_manuals.csv  2015_2021_mel.csv  2015_2021_staffing.csv  2015_2021_weather.csv  ASRS_Dataset_Final.ipynb  ASRS_Dataset_Rebalance.ipynb  context_engineering.ipynb  events_process.ipynb  llm_process.ipynb  merge.ipynb  rebalance_process.ipynb  wuh.csv
fine-tuning/: L3_Evaluation.ipynb  TC_Aircraft_v_Rest.ipynb  TC_L2_Exploration.ipynb  TC_L2_Fine_Tune.ipynb  l3_valid_predictions.csv
raw/: 0_keep_first.csv  0_r2_dupe_keep_first.csv  2020_2021_human_factors.csv  airspace_structure_jan_2015_jan_2021.csv  atc_nav_builds_jan_2015_jan_2021.csv  chartorpub_jan_2015_jan_2021.csv  company_policy_jan_2015_jan_2021.csv  env_nonweather_jan_2015_jan_2021.csv  equipment_tooling_jan_2015_jan_2021.csv  incorrect_part_jan_2015_jan_2021.csv  logbook_entry_jan_2015_jan_2021.csv  manuals_jan_2015_jan_2021.csv  mel_jan_2015_jan_2021.csv  (+1 more)
(+61 files in other folders)
